# cim-agent-alchemist

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/: bevy_integration.rs  config.yaml  interact.sh  simple_test.rs
src/: agent.rs  bevy_plugin.rs  config.rs  error.rs  lib.rs  main.rs  model.rs  nats_integration.rs  service.rs
tests/: infrastructure_tests.rs  integration.rs
tests/infrastructure/: mod.rs  test_agent_initialization.rs  test_conversation_flow.rs  test_nats_service_integration.rs
