[package]
name = "cim-agent-alchemist"
version = "0.1.0"
edition = "2021"
authors = ["CIM Team"]
description = "Alchemist Agent - A CIM agent that helps understand and navigate CIM architecture"
license = "MIT"
repository = "https://github.com/thecowboyai/alchemist"

[dependencies]
# Core CIM domains
cim-domain-agent = { path = "../cim-domain-agent" }
cim-domain-dialog = { path = "../cim-domain-dialog" }
cim-domain-identity = { path = "../cim-domain-identity" }
cim-domain-graph = { path = "../cim-domain-graph" }
cim-domain-conceptualspaces = { path = "../cim-domain-conceptualspaces" }
cim-domain-workflow = { path = "../cim-domain-workflow" }

# Infrastructure
cim-infrastructure = { path = "../cim-infrastructure" }
cim-bridge = { path = "../cim-bridge" }

# NATS for messaging
async-nats = "0.41"
nats = "0.25"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# AI Model integration
reqwest = { version = "0.12", features = ["json"] }
ollama-rs = "0.3"

# UUID generation
uuid = { version = "1.10", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Additional serialization formats
serde_yaml = "0.9"
toml = "0.8"

# Async trait
async-trait = "0.1"

[[bin]]
name = "alchemist"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
wiremock = "0.6"

[features]
default = ["ollama"]
ollama = []
openai = []
anthropic = []
