[package]
name = "cim-agent-alchemist"
version = "0.3.0"
edition = "2021"
authors = ["CIM Team"]
description = "Alchemist Agent - A CIM agent that helps understand and navigate CIM architecture"
license = "MIT"
repository = "https://github.com/thecowboyai/alchemist"

[features]
default = []
bevy = ["dep:bevy", "dep:crossbeam-channel"]

[dependencies]
# Core CIM domains
cim-domain-agent = { path = "../cim-domain-agent" }
cim-domain-dialog = { path = "../cim-domain-dialog" }
cim-domain-identity = { path = "../cim-domain-identity" }
cim-domain-graph = { path = "../cim-domain-graph" }
cim-domain-conceptualspaces = { path = "../cim-domain-conceptualspaces" }
cim-domain-workflow = { path = "../cim-domain-workflow" }

# Infrastructure
cim-infrastructure = { path = "../cim-infrastructure" }
cim-bridge = { path = "../cim-bridge" }

# NATS for messaging - use workspace version
async-nats = { version = "0.41", features = ["service"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client for AI providers
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }

# Bevy (optional) - use workspace version
bevy = { version = "0.16", path = "../bevy-patched", optional = true, default-features = false }
crossbeam-channel = { version = "0.5", optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[[bin]]
name = "cim-agent-alchemist"
path = "src/main.rs"

[[example]]
name = "simple_test"
path = "examples/simple_test.rs"

[workspace]
